Bug 509029 - Loan account field not updatable: next due date
Summary: Loan account field not updatable: next due date
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-02 12:36 UTC by surcouf
Modified: 2025-10-08 15:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description surcouf 2025-09-02 12:36:10 UTC
SUMMARY
The loan account editing wizard doesn't allow to modify this information: next due date


STEPS TO REPRODUCE
1. open an existing loan account in kmymoney
2. click "edit account"
3. the "edit loan account wizard" opens
4. follow all four proposed edition paths:
-- modify the interest rate, 
-- modify additional fees, 
-- modify other loan information, 
-- modify loan attributes
and try editing the next due date of the loan repayment.

OBSERVED RESULT
none of the four paths modifying a loan account (modify the interest rate, modify additional fees, modify other loan information, modify loan attributes) allow editing the next due date of the loan repayment..

EXPECTED RESULT
the fourth path "modify loan attributes" should propose to change the next due date of the loan repayment.




ADDITIONAL INFORMATION
a) the workaround indicated in bug 386186 doesn't work for me, i don't know why. Nothing happens when i follow comment#8 https://bugs.kde.org/show_bug.cgi?id=386186#c8

> 5.2.1 has a (maybe hidden) feature to do that:
> 
> - select the schedule you want to change
> - open the context menu with the right mouse button
> - hold down the shift key while you select Edit

b) The bug 386186 https://bugs.kde.org/show_bug.cgi?id=386186 is not a duplicate. It addresses the topic "update online account details when account type is loan", which is strictly speaking not related to "update loan details (next schedule date etc...) of an existing Kmymoney loan account"


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Debian GNU/Linux 12 (bookworm) 12 (x86_64)
KMyMoney Version 5.2.1-5f85e88
KMyMoney: 5.2.1-5f85e88
Alkimia: 8.2.70 (build against 8.2.70)
Aqbanking: Unknown (build against 6.6.1)
Gpgme: Unknown (build against 1.23.2)
Gwenhywfar: Unknown (build against 5.12.1)
KDiagram: Unknown (build against )
libical: Unknown (build against 3.0.9)
libofx: Unknown (build against 7.0.4)
SQLCipher: Unknown (build against 3.20.1)
KDE Frameworks: 6.17.0
Qt: Using 6.8.3 and built against 6.8.3
Debian GNU/Linux 12 (bookworm) (Xcb)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.1.0-38-amd64
Comment 1 Thomas Baumgart 2025-10-08 14:44:59 UTC
Git commit 80c7a1a51b015c8c78c142f2c5aa9d055793ede0 by Thomas Baumgart.
Committed on 08/10/2025 at 14:44.
Pushed by tbaumgart into branch 'master'.

Allow modifying loan schedule using schedule editor

This change fully implements the capability to modify the schedule
details of a loan by holding down the Shift key when selecting to edit
the schedule from the context menu.
FIXED-IN: 5.2.2

M  +1    -3    kmymoney/misc/kmm_menuactionexchanger.cpp
M  +18   -6    kmymoney/views/kscheduledview.cpp
M  +1    -0    kmymoney/views/kscheduledview.h
M  +2    -2    kmymoney/views/kscheduledview_p.h
M  +15   -1    kmymoney/views/newtransactioneditor.cpp
M  +43   -42   kmymoney/widgets/amountedit.cpp
M  +0    -1    kmymoney/widgets/amountedit.h
M  +4    -0    kmymoney/widgets/creditdebitedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/80c7a1a51b015c8c78c142f2c5aa9d055793ede0
Comment 2 Thomas Baumgart 2025-10-08 15:29:22 UTC
Git commit 04b70b989cc84594aeb53593874b870d928269b4 by Thomas Baumgart.
Committed on 08/10/2025 at 14:45.
Pushed by tbaumgart into branch '5.2'.

Allow modifying loan schedule using schedule editor

This change fully implements the capability to modify the schedule
details of a loan by holding down the Shift key when selecting to edit
the schedule from the context menu.
FIXED-IN: 5.2.2
(cherry picked from commit 80c7a1a51b015c8c78c142f2c5aa9d055793ede0)

M  +1    -3    kmymoney/misc/kmm_menuactionexchanger.cpp
M  +18   -6    kmymoney/views/kscheduledview.cpp
M  +1    -0    kmymoney/views/kscheduledview.h
M  +2    -2    kmymoney/views/kscheduledview_p.h
M  +15   -1    kmymoney/views/newtransactioneditor.cpp
M  +43   -42   kmymoney/widgets/amountedit.cpp
M  +0    -1    kmymoney/widgets/amountedit.h
M  +4    -0    kmymoney/widgets/creditdebitedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/04b70b989cc84594aeb53593874b870d928269b4