Allow modifying loan schedule using schedule editor

This change fully implements the capability to modify the schedule
details of a loan by holding down the Shift key when selecting to edit
the schedule from the context menu.

BUG: 509029
FIXED-IN: 5.2.2